--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "nodepop",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Practica Node.js KC Bootcamp III",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "installDB": "node ./scripts/install_db"
+    "start": "NODE_PATH=nodepop DEBUG=nodepop:app.js nodemon ./bin/www",
+    "installDB": "node ./bin/install_db"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "jscs": "^3.0.3",
+    "jshint": "^2.9.2",
+    "jsonwebtoken": "^6.2.0",
+    "mongoose": "^4.4.14",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sha256": "^0.2.0"
   }
 }
