--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
+    "email-validator": "^1.0.4",
     "express": "~4.13.1",
     "jscs": "^3.0.3",
     "jshint": "^2.9.2",
