--- a/.jscsrc
+++ b/.jscsrc
@@ -1,3 +1,91 @@
 {
-
+  "fileExtensions": [
+    ".js"
+  ],
+  "excludeFiles": [
+    "node_modules/**",
+    "lib/**",
+    ".jscsrc/**",
+    "bin/**",
+    "locales",
+    "models",
+    "public",
+    "views"
+  ],
+  "validateQuoteMarks": "'",
+  "maximumLineLength": {
+    "value": 120,
+    "tabSize": 4,
+    "allExcept": ["urlComments", "regex"]
+  },
+  "requireCurlyBraces": [
+    "if",
+    "else",
+    "for",
+    "while",
+    "do",
+    "try",
+    "catch"
+  ],
+  "requireSpaceAfterKeywords": [
+    "if",
+    "else",
+    "for",
+    "while",
+    "do",
+    "switch",
+    "case",
+    "return",
+    "try",
+    "catch",
+    "function",
+    "typeof"
+  ],
+  "requireSpaceBeforeBlockStatements": true,
+  "requireParenthesesAroundIIFE": true,
+  "requireSpacesInConditionalExpression": true,
+  "disallowSpacesInNamedFunctionExpression": {
+    "beforeOpeningRoundBrace": true
+  },
+  "disallowSpacesInFunctionDeclaration": {
+    "beforeOpeningRoundBrace": true
+  },
+  "requireSpaceBetweenArguments": true,
+  "requireMultipleVarDecl": "onevar",
+  "requireVarDeclFirst": true,
+  "requireBlocksOnNewline": true,
+  "disallowEmptyBlocks": true,
+  "disallowSpacesInsideArrayBrackets": true,
+  "disallowSpacesInsideParentheses": true,
+  "disallowDanglingUnderscores": false,
+  "requireCommaBeforeLineBreak": true,
+  "disallowSpaceAfterPrefixUnaryOperators": true,
+  "disallowSpaceBeforePostfixUnaryOperators": true,
+  "disallowSpaceBeforeBinaryOperators": [
+    ","
+  ],
+  "requireSpacesInForStatement": true,
+  "requireSpacesInAnonymousFunctionExpression": {
+    "beforeOpeningRoundBrace": true,
+    "beforeOpeningCurlyBrace": true
+  },
+  "requireSpaceBeforeBinaryOperators": true,
+  "requireSpaceAfterBinaryOperators": true,
+  "disallowKeywords": [
+    "with",
+    "continue"
+  ],
+  "validateIndentation": 4,
+  "disallowMixedSpacesAndTabs": true,
+  "disallowTrailingWhitespace": true,
+  "disallowTrailingComma": true,
+  "disallowKeywordsOnNewLine": [
+    "else"
+  ],
+  "requireLineFeedAtFileEnd": true,
+  "requireCapitalizedConstructors": true,
+  "requireDotNotation": true,
+  "disallowNewlineBeforeBlockStatements": true,
+  "disallowMultipleLineStrings": true,
+  "requireSpaceBeforeObjectValues": true
 }
